sort.basic.selection.AlgSelectionSort.scala.error
Compilation error:
AlgSelectionSort:3: error: ':' expected but ')' found.
  def rangMini(debut){
                    ^AlgSelectionSort:19: error: identifier expected but '}' found.
} 
^