sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {
  def rangMini(debut){
    var len=getNombreValeurs()-debut
    var rangMini=0
    for (i<-debut to len){
      if (!plusPetitQue(i,mini)){
        mini=i
      }
    }
  }
  var mettreLa = 1
  var len = getNombreValeurs()
  for (i<-1 to len){
    var r = rangMini(debut)
    echange(debut,r)
    debut+=1
  }
}